@@ -10,8 +10,8 @@ import org.schabi.newpipe.extractor.services.media_ccc.search.filter.MediaCCCFil
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.List;
+import java.nio.charset.StandardCharsets;
 
-import static org.schabi.newpipe.extractor.utils.Utils.UTF_8;
 
 public class MediaCCCSearchQueryHandlerFactory extends SearchQueryHandlerFactory {
 
@@ -32,7 +32,7 @@ public class MediaCCCSearchQueryHandlerFactory extends SearchQueryHandlerFactory
                          final List<FilterItem> sortFilter) throws ParsingException {
         try {
             return "https://media.ccc.de/public/events/search?q="
-                    + URLEncoder.encode(query, UTF_8);
+                    + URLEncoder.encode(query, StandardCharsets.UTF_8.name());
         } catch (final UnsupportedEncodingException e) {
             throw new ParsingException("Could not create search string with query: " + query, e);
         }
