@@ -16,7 +16,7 @@ import java.net.URLEncoder;
 import java.util.List;
 
 import static org.schabi.newpipe.extractor.services.soundcloud.SoundcloudParsingHelper.SOUNDCLOUD_API_V2_URL;
-import static org.schabi.newpipe.extractor.utils.Utils.UTF_8;
+import java.nio.charset.StandardCharsets;
 
 public class SoundcloudSearchQueryHandlerFactory extends SearchQueryHandlerFactory {
 
@@ -46,7 +46,7 @@ public class SoundcloudSearchQueryHandlerFactory extends SearchQueryHandlerFacto
         sortQuery = searchFilters.evaluateSelectedSortFilters();
 
         try {
-            return url + "?q=" + URLEncoder.encode(id, UTF_8) + sortQuery + "&client_id="
+            return url + "?q=" + URLEncoder.encode(id, StandardCharsets.UTF_8.name()) + sortQuery + "&client_id="
                     + SoundcloudParsingHelper.clientId() + "&limit=" + ITEMS_PER_PAGE
                     + "&offset=0";
 
