@@ -72,7 +72,6 @@ import static org.schabi.newpipe.extractor.services.youtube.extractors.YoutubeSt
 import static org.schabi.newpipe.extractor.services.youtube.extractors.YoutubeStreamExtractor.isPlayerResponseNotValid;
 import static org.schabi.newpipe.extractor.utils.Utils.HTTP;
 import static org.schabi.newpipe.extractor.utils.Utils.HTTPS;
-import static org.schabi.newpipe.extractor.utils.Utils.UTF_8;
 import static org.schabi.newpipe.extractor.utils.Utils.getStringResultFromRegexArray;
 import static org.schabi.newpipe.extractor.utils.Utils.isNullOrEmpty;
 
@@ -280,7 +279,7 @@ YoutubeParsingHelper {
     public static boolean isGoogleURL(final String url) {
         final String cachedUrl = extractCachedUrlIfNeeded(url);
         try {
-            final URL u = new URL(cachedUrl);
+            final URL u = Utils.stringToURL(cachedUrl);
             return GOOGLE_URLS.stream().anyMatch(item -> u.getHost().startsWith(item));
         } catch (final MalformedURLException e) {
             return false;
@@ -943,9 +942,13 @@ YoutubeParsingHelper {
                 internUrl = internUrl.substring(10);
                 final String[] params = internUrl.split("&");
                 for (final String param : params) {
-                    if (param.split("=")[0].equals("q")) {
+                    final String[] keyValue = param.split("=", 2);
+                    if (keyValue[0].equals("q")) {
+                        if (keyValue.length < 2) {
+                            return "";
+                        }
                         try {
-                            return URLDecoder.decode(param.split("=")[1], UTF_8);
+                            return URLDecoder.decode(keyValue[1], StandardCharsets.UTF_8.name());
                         } catch (final UnsupportedEncodingException e) {
                             return null;
                         }
@@ -1185,7 +1188,7 @@ YoutubeParsingHelper {
         }
 
         // Check if the request was redirected to the error page.
-        final URL latestUrl = new URL(response.latestUrl());
+        final URL latestUrl = Utils.stringToURL(response.latestUrl());
         if (latestUrl.getHost().equalsIgnoreCase("www.youtube.com")) {
             final String path = latestUrl.getPath();
             if (path.equalsIgnoreCase("/oops") || path.equalsIgnoreCase("/error")) {
@@ -2150,7 +2153,7 @@ YoutubeParsingHelper {
             final String metaInfoLinkUrl = YoutubeParsingHelper.getUrlFromNavigationEndpoint(
                     infoPanelContentRenderer.getObject("sourceEndpoint"));
             try {
-                metaInfo.addUrl(new URL(Objects.requireNonNull(extractCachedUrlIfNeeded(
+                metaInfo.addUrl(Utils.stringToURL(Objects.requireNonNull(extractCachedUrlIfNeeded(
                         metaInfoLinkUrl))));
             } catch (final NullPointerException | MalformedURLException e) {
                 throw new ParsingException("Could not get metadata info URL", e);
@@ -2192,7 +2195,7 @@ YoutubeParsingHelper {
             try {
                 final String url = YoutubeParsingHelper.getUrlFromNavigationEndpoint(actionButton
                         .getObject("command"));
-                metaInfo.addUrl(new URL(Objects.requireNonNull(extractCachedUrlIfNeeded(url))));
+                metaInfo.addUrl(Utils.stringToURL(Objects.requireNonNull(extractCachedUrlIfNeeded(url))));
             } catch (final NullPointerException | MalformedURLException e) {
                 throw new ParsingException("Could not get metadata info URL", e);
             }
@@ -2212,7 +2215,7 @@ YoutubeParsingHelper {
             // Ignore Google URLs, because those point to a Google search about "Covid-19"
             if (url != null && !isGoogleURL(url)) {
                 try {
-                    metaInfo.addUrl(new URL(url));
+                    metaInfo.addUrl(Utils.stringToURL(url));
                     final String description = getTextFromObject(clarificationRenderer
                             .getObject("secondarySource"));
                     metaInfo.addUrlText(description == null ? url : description);
@@ -2298,7 +2301,7 @@ YoutubeParsingHelper {
                             Localization.DEFAULT, ContentCountry.DEFAULT)
                             .value("url", "https://www.youtube.com/" + idOrPath)
                             .done())
-                    .getBytes(UTF_8);
+                    .getBytes(StandardCharsets.UTF_8);
 
             final JsonObject jsonResponse = getJsonPostResponse("navigation/resolve_url",
                     body, Localization.DEFAULT);
@@ -2375,7 +2378,7 @@ YoutubeParsingHelper {
             }
 
             final byte[] body = JsonWriter.string(bodyBuilder.done())
-                    .getBytes(UTF_8);
+                    .getBytes(StandardCharsets.UTF_8);
 
             final JsonObject jsonResponse = getJsonPostResponse("browse", body, loc);
 
